fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ header h5, header h6{
     color: #7c7c7c;
 }
 
+.tim-image{
+    margin-top: 20px;
+}
+
 .author{
     color: #24aae5;
 }
@@ -52,6 +56,7 @@ table{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 th{
     background-color: #24aae5;
     color: white;
